--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web-app-qrcode",
   "private": true,
+  "homepage": "https://19127526.github.io/QR-CODE/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -8,7 +9,9 @@
     "local": "vite -f .env.local ",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "babel-plugin-macros": "^3.1.0",
