--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
     "babel-plugin-macros": "^3.1.0",
+    "framer-motion": "^12.6.5",
+    "postcss": "^8.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.5.0",
     "vite-plugin-dynamic-import": "^1.5.0",
     "vite-plugin-svgr": "^4.2.0"
   },
@@ -29,6 +33,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "tailwindcss": "^3",
     "vite": "^5.2.0"
   }
 }
