--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
+    "axios": "^1.8.4",
     "babel-plugin-macros": "^3.1.0",
     "framer-motion": "^12.6.5",
     "postcss": "^8.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.5.0",
+    "socket.io-client": "^4.8.1",
     "vite-plugin-dynamic-import": "^1.5.0",
     "vite-plugin-svgr": "^4.2.0"
   },
