--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
+    "antd": "^5.24.7",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "babel-plugin-macros": "^3.1.0",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^12.6.5",
     "postcss": "^8.5.3",
     "react": "^18.2.0",
